--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
     "@mui/icons-material": "^6.4.1",
-    "@mui/material": "^5.11.4",
+    "@mui/material": "^6.4.1",
+    "@mui/x-date-pickers": "^7.24.1",
+    "@rollup/plugin-commonjs": "^28.0.2",
     "axios": "^1.7.9",
     "crypto-browserify": "^3.12.1",
     "crypto-js": "^4.2.0",
@@ -27,8 +29,8 @@
   "devDependencies": {
     "@babel/plugin-proposal-optional-chaining": "^7.21.0",
     "@eslint/js": "^9.17.0",
-    "@types/react": "^18.3.18",
-    "@types/react-dom": "^18.3.5",
+    "@types/react": "^19.0.8",
+    "@types/react-dom": "^19.0.3",
     "@vitejs/plugin-react": "^4.3.4",
     "eslint": "^9.17.0",
     "eslint-plugin-react": "^7.37.2",
